
2000-12-13	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/score/isr.h, src/isr.c: Allocate it from the
	workspace rather than explicitly declaring it.  This allows
	the size to be a non-constant from the perspective of score/cpu.

2000-12-01	Joel Sherrill <joel@OARcorp.com>

	* macros/rtems/score/coresem.inl: Removed comments since convention
	calls for comments to be in inline versin.
	* macros/rtems/score/object.inl (Objects_Get_local_object): Fixed
	style to use _ prefix on variable names and use parentheses.
	* macros/rtems/score/object.inl (_Objects_Namespace_remove): Added.

2000-11-30	Joel Sherrill <joel@OARcorp.com>

	* General effort to make things compile with macros not inlines
	* inline/rtems/score/coremutex.inl: Added comment indicating
	for macros there is another copy of
	_CORE_mutex_Seize_interrupt_trylock() in src/coremutexseize.c.
	* src/coremutexseize.c: Added body of
	_CORE_mutex_Seize_interrupt_trylock() for macro case.
	* macros/rtems/score/coremutex.inl: Added prototype for 
	_CORE_mutex_Seize_interrupt_trylock() since there is a real
	body when macros are enabled.
	* macros/rtems/score/coresem.inl: Added macro implementation of
	_CORE_semaphore_Seize_isr_disable.
	* macros/score/Makefile.am: Fixed typos.
	* rtems/score/address.inl: Correct macro implementation of
	_Addresses_Is_aligned() so it would compile.
	* macros/rtems/score/coremsg.inl: Added closing parentheses.
	
2000-11-28	Chris Johns <ccj@acm.org>

	* src/heapallocate.c: Do not allow the size to overflow when
	adjusting it.  A test allocated a stack of -1 (~0). This
	actually resulted in a stack being allocated but with a
	size of 0xb. The allocator did not test the size to see if
	it rolled through 0 and so allowed the allocation to happen, the
	thread to get created. The task crashed as you would expect.

2000-11-02	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/system.h: Use proper conditional (RTEMS_POSIX_API)